--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vueuse/core": "^14.1.0",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
@@ -19,8 +21,11 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^6.0.2",
+    "typescript": "^5.9.3",
     "vite": "^7.2.4",
-    "vite-plugin-vue-devtools": "^8.0.5"
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vue-tsc": "^3.1.8"
   }
 }
